--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-25 22:49:46
-# Total rules: 4960
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-26 11:04:40
+# Total rules: 4952
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -515,7 +515,6 @@
 .applogios.uc.cn
 .appsad.cn
 .appsec-mobile.meituan.com
-.appsflyersdk.com
 .appsupport.qq.com
 .appversion.115.com
 .apsrgeo.amap.com
@@ -599,6 +598,7 @@
 .bestpush.pconline.com.cn
 .beyondwickedmapping.org
 .bgg.baidu.com
+.bids.concert.io
 .bigdata.ssp.samsung.com
 .biggestplayer.cachefly.net
 .bingads.microsoft.com
@@ -749,6 +749,7 @@
 .cdn-bongdadem-net.cdn.ampproject.org
 .cdn-ketchapp.akamaized.net
 .cdn.ark.qq.com
+.cdn.concert.io
 .cdn.onesignal.com
 .cdn.tanx.com
 .cdnweb3.pages.dev
@@ -830,12 +831,10 @@
 .collector.bsg.brave.com
 .collector.dcdn.baidu.com
 .collector.github.com
-.collector.unsplash.com
 .commdata.v.qq.com
 .commerce.bing.com
 .commondata.oss-cn-hangzhou.aliyuncs.com
 .community.fandom.com
-.concert.io
 .concertads-configs.vox-cdn.com
 .conf.hpplay.cn
 .conf.international.baidu.com
@@ -851,6 +850,7 @@
 .contentrecommend-out.mobile.sina.cn
 .contoso-my.sharepoint.com
 .contributions.guardianapis.com
+.conversions.appsflyersdk.com
 .cookie-guard-erdee.ey.r.appspot.com
 .cookielawblog.wordpress.com
 .coordinator.cm.bloomberg.com
@@ -883,7 +883,6 @@
 .cpu-admin.baidu.com
 .cpu.baidu.com
 .cpucdn.baidu.com
-.cpux.gmud.top
 .crab.baidu.com
 .crash.163.com
 .crash2.zhihu.com
@@ -2441,6 +2440,7 @@
 .dlp4luwpus5kr.cloudfront.net
 .dlrioxg1637dk.cloudfront.net
 .dls-account.di.atlas.samsung.com
+.dlsdk.appsflyersdk.com
 .dlsw.baidu.com
 .dlsw.br.baidu.com
 .dlswbr.baidu.com
@@ -2653,6 +2653,7 @@
 .dyj8pbcnat4xv.cloudfront.net
 .dykwdhfiuha6l.cloudfront.net
 .dymwsh1c2kslr.cloudfront.net
+.dynamic-report-api.appsflyersdk.com
 .dyodrs1kxvg6o.cloudfront.net
 .dyrfxuvraq0fk.cloudfront.net
 .dysuze6ljcmcr.cloudfront.net
@@ -2747,7 +2748,6 @@
 .events.bsky.app
 .events.framer.com
 .events.iap.unity3d.com
-.events.launchdarkly.com
 .events.mapbox.com
 .events.mz.unity3d.com
 .events.reddit.com
@@ -2869,6 +2869,7 @@
 .gb.corp.163.com
 .gc.sec.miui.com
 .gcapi.sy.kugou.com
+.gcdsdk.appsflyersdk.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gecko.snssdk.com
@@ -3074,6 +3075,7 @@
 .httpdns.meituan.com
 .httpdns.music.163.com
 .httpdns.n.netease.com
+.httpdns.yunxindns.com
 .httpdnsvip.meituan.com
 .httpring.qq.com
 .https-filtering-check.adtidy.org
@@ -3181,6 +3183,7 @@
 .imtt.qq.com
 .in.applicationinsights.azure.com
 .in.yimg.com
+.inapps.appsflyersdk.com
 .indexww.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
@@ -3202,7 +3205,6 @@
 .inte.sogou.com
 .inte.sogoucdn.com
 .inte.sohu.com
-.intensedebate.com
 .interest.mix.sina.com.cn
 .intergient.com
 .internal-e.posthog.com
@@ -3278,6 +3280,7 @@
 .labadena.com
 .landing.ultimate-success-emea.test.ajo.adobe.com
 .landingpage.emaillpb.adobe.com
+.launches.appsflyersdk.com
 .lb.gtimg.com
 .lc-push.zhihu.com
 .leak.360.cn
@@ -3332,7 +3335,6 @@
 .log.tpns.tencent.com
 .log.waimai.baidu.com
 .log.web.kugou.com
-.log.ys7.com
 .log.zijieapi.com
 .log0-misc-alinc2.amemv.com
 .log0-misc-lf.amemv.com
@@ -3350,7 +3352,6 @@
 .logapi-and.zhipin.com
 .logapi-ios.zhipin.com
 .logapi.zhipin.com
-.logger.unsplash.com
 .loggw-ex.alipay.com
 .loggw-exsdk.alipay.com
 .loggw.alipay.com
@@ -3428,7 +3429,6 @@
 .masdkv6.3g.qq.com
 .master-shopify-tracker.s3.amazonaws.com
 .match.p4p.1688.com
-.matomo.openstreetmap.org
 .matwbp.iask.sina.com.cn
 .mazu.3g.qq.com
 .mazu.m.qq.com
@@ -3449,7 +3449,6 @@
 .media.globalsign.com
 .mediation-tracking.prd.mz.internal.unity3d.com
 .mediation.unity3d.com
-.mediavine.com
 .mellowads.b-cdn.net
 .mermaid.ximalaya.com
 .messaging-notifications.api.nytimes.com
@@ -3702,7 +3701,6 @@
 .paopao.iqiyi.com
 .papi.look.360.cn
 .par02p.wns.windows.com
-.parking.godaddy.com
 .parsely.com
 .partner.toutiao.com
 .partnerad.l.google.com
@@ -3794,6 +3792,7 @@
 .prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
+.privacy-sandbox.appsflyersdk.com
 .projecta-common-1258344701.file.myqcloud.com
 .projectagora.s3.amazonaws.com
 .promote.biz.weibo.cn
@@ -3898,6 +3897,7 @@
 .redrain-aglnsy.bytedance.com
 .refer.wordpress.com
 .referrer.disqus.com
+.register.appsflyersdk.com
 .reke.at.sohu.com
 .reksaidnslog.security.mihoyo.com
 .rel.msn.com
@@ -3924,7 +3924,6 @@
 .richmedia.video.qq.com
 .richmedia.yimg.com
 .riqhisfus.com
-.risk.clearbit.com
 .river.zhidao.baidu.com
 .rj.baidu.com
 .rj.m.taobao.com
@@ -4012,9 +4011,7 @@
 .sdtagging.azureedge.net
 .se.360.cn
 .sea.napi.ucweb.com
-.seal.digicert.com
 .seal.globalsign.com
-.seal.godaddy.com
 .sealine.youku.com
 .seao.business.samsung.com
 .search.anonymous.ads.brave.com
@@ -4033,7 +4030,6 @@
 .send.preply.com
 .sentry.d.xiaomi.net
 .sentry.music.163.com
-.server.iad.liveperson.net
 .serveraddr.service.kugou.com
 .service.danmu.youku.com
 .sessions.bugsnag.com
@@ -4096,7 +4092,6 @@
 .sms.petbarn.test.ajo.adobe.com
 .sms.rtcdpsummitlab.test.ajo.adobe.com
 .sms.ultimate-success-emea.test.ajo.adobe.com
-.snap.licdn.com
 .sngmta.qq.com
 .snippets.mozilla.com
 .snowflake.qq.com
@@ -4166,13 +4161,11 @@
 .stat.youku.com
 .stat.youpin.mi.com
 .static-addtoany-com.cdn.ampproject.org
-.static-ads.akamaized.net
 .static-doubleclick-net.l.google.com
 .static.addtoany.com
 .static.alimama.com
 .static.g.iqiyi.com
 .static.map.bdimg.com
-.static.narrativ.com
 .static.su.baidu.com
 .staticadm.leju.sina.com.cn
 .staticxx.facebook.com
@@ -4270,7 +4263,6 @@
 .telemetry-coverage.mozilla.org
 .telemetry.adobe.io
 .telemetry.appex.bing.com
-.telemetry.dropbox.com
 .telemetry.microsoft.com
 .telemetry.mozilla.org
 .telemetry.tradingview.com
@@ -4445,6 +4437,7 @@
 .union.ucweb.com
 .unionimage.baidu.com
 .unitacs.m.taobao.com
+.unityads.unity.cn
 .unityads.unity3d.com
 .unstat.baidu.com
 .up-hl.3g.qq.com
@@ -4480,7 +4473,6 @@
 .vcs.zijieapi.com
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
-.vebo-vast.pages.dev
 .vegslb.com
 .vf.startpage.com
 .vhotwsh.video.qq.com
@@ -4644,7 +4636,6 @@
 .zhstatic.zhihu.com
 .zmetrics.msn.com
 .znsv.baidu.com
-.zoosnet.net
 .zqhd.eastmoney.com
 .zqtk.net
 .zt.jd.com
@@ -4823,6 +4814,7 @@ livew.l.qq.com
 loan-supermarket.faas.ele.me
 log.star.ele.me
 log.stat.kugou.com
+log.ys7.com
 logview.uc.alimama.com
 lookup.api.bsb.baidu.com
 ls.l.qq.com
