--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-26 11:04:40
-# Total rules: 4952
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-27 11:22:29
+# Total rules: 4966
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -327,6 +327,7 @@
 .adtrack.ucweb.com
 .adtrack.xiaojukeji.com
 .adv.app.qq.com
+.adv.ccb.com
 .adv.sec.intl.miui.com
 .adv.sec.miui.com
 .advbanners.global.ssl.fastly.net
@@ -515,6 +516,7 @@
 .applogios.uc.cn
 .appsad.cn
 .appsec-mobile.meituan.com
+.appsflyersdk.com
 .appsupport.qq.com
 .appversion.115.com
 .apsrgeo.amap.com
@@ -598,7 +600,6 @@
 .bestpush.pconline.com.cn
 .beyondwickedmapping.org
 .bgg.baidu.com
-.bids.concert.io
 .bigdata.ssp.samsung.com
 .biggestplayer.cachefly.net
 .bingads.microsoft.com
@@ -749,7 +750,6 @@
 .cdn-bongdadem-net.cdn.ampproject.org
 .cdn-ketchapp.akamaized.net
 .cdn.ark.qq.com
-.cdn.concert.io
 .cdn.onesignal.com
 .cdn.tanx.com
 .cdnweb3.pages.dev
@@ -831,10 +831,12 @@
 .collector.bsg.brave.com
 .collector.dcdn.baidu.com
 .collector.github.com
+.collector.unsplash.com
 .commdata.v.qq.com
 .commerce.bing.com
 .commondata.oss-cn-hangzhou.aliyuncs.com
 .community.fandom.com
+.concert.io
 .concertads-configs.vox-cdn.com
 .conf.hpplay.cn
 .conf.international.baidu.com
@@ -850,7 +852,6 @@
 .contentrecommend-out.mobile.sina.cn
 .contoso-my.sharepoint.com
 .contributions.guardianapis.com
-.conversions.appsflyersdk.com
 .cookie-guard-erdee.ey.r.appspot.com
 .cookielawblog.wordpress.com
 .coordinator.cm.bloomberg.com
@@ -883,6 +884,7 @@
 .cpu-admin.baidu.com
 .cpu.baidu.com
 .cpucdn.baidu.com
+.cpux.gmud.top
 .crab.baidu.com
 .crash.163.com
 .crash2.zhihu.com
@@ -2440,7 +2442,6 @@
 .dlp4luwpus5kr.cloudfront.net
 .dlrioxg1637dk.cloudfront.net
 .dls-account.di.atlas.samsung.com
-.dlsdk.appsflyersdk.com
 .dlsw.baidu.com
 .dlsw.br.baidu.com
 .dlswbr.baidu.com
@@ -2653,7 +2654,6 @@
 .dyj8pbcnat4xv.cloudfront.net
 .dykwdhfiuha6l.cloudfront.net
 .dymwsh1c2kslr.cloudfront.net
-.dynamic-report-api.appsflyersdk.com
 .dyodrs1kxvg6o.cloudfront.net
 .dyrfxuvraq0fk.cloudfront.net
 .dysuze6ljcmcr.cloudfront.net
@@ -2748,6 +2748,7 @@
 .events.bsky.app
 .events.framer.com
 .events.iap.unity3d.com
+.events.launchdarkly.com
 .events.mapbox.com
 .events.mz.unity3d.com
 .events.reddit.com
@@ -2869,7 +2870,6 @@
 .gb.corp.163.com
 .gc.sec.miui.com
 .gcapi.sy.kugou.com
-.gcdsdk.appsflyersdk.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gecko.snssdk.com
@@ -2915,6 +2915,7 @@
 .googleadapis.l.google.com
 .googleads.github.io
 .googleadservices.com
+.googleoptimize.com
 .googlesyndication.com
 .googletagmanager.com
 .googletagservices.com
@@ -3183,7 +3184,6 @@
 .imtt.qq.com
 .in.applicationinsights.azure.com
 .in.yimg.com
-.inapps.appsflyersdk.com
 .indexww.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
@@ -3205,6 +3205,7 @@
 .inte.sogou.com
 .inte.sogoucdn.com
 .inte.sohu.com
+.intensedebate.com
 .interest.mix.sina.com.cn
 .intergient.com
 .internal-e.posthog.com
@@ -3280,7 +3281,6 @@
 .labadena.com
 .landing.ultimate-success-emea.test.ajo.adobe.com
 .landingpage.emaillpb.adobe.com
-.launches.appsflyersdk.com
 .lb.gtimg.com
 .lc-push.zhihu.com
 .leak.360.cn
@@ -3335,6 +3335,7 @@
 .log.tpns.tencent.com
 .log.waimai.baidu.com
 .log.web.kugou.com
+.log.ys7.com
 .log.zijieapi.com
 .log0-misc-alinc2.amemv.com
 .log0-misc-lf.amemv.com
@@ -3352,6 +3353,7 @@
 .logapi-and.zhipin.com
 .logapi-ios.zhipin.com
 .logapi.zhipin.com
+.logger.unsplash.com
 .loggw-ex.alipay.com
 .loggw-exsdk.alipay.com
 .loggw.alipay.com
@@ -3429,6 +3431,7 @@
 .masdkv6.3g.qq.com
 .master-shopify-tracker.s3.amazonaws.com
 .match.p4p.1688.com
+.matomo.openstreetmap.org
 .matwbp.iask.sina.com.cn
 .mazu.3g.qq.com
 .mazu.m.qq.com
@@ -3449,6 +3452,7 @@
 .media.globalsign.com
 .mediation-tracking.prd.mz.internal.unity3d.com
 .mediation.unity3d.com
+.mediavine.com
 .mellowads.b-cdn.net
 .mermaid.ximalaya.com
 .messaging-notifications.api.nytimes.com
@@ -3650,6 +3654,7 @@
 .openrcv.baidu.com
 .ophan.theguardian.com
 .opportunarch.iqiyi.com
+.optaim.com
 .optimeeze.appspot.com
 .optimize.google.com
 .optimus-ads.amap.com
@@ -3701,6 +3706,7 @@
 .paopao.iqiyi.com
 .papi.look.360.cn
 .par02p.wns.windows.com
+.parking.godaddy.com
 .parsely.com
 .partner.toutiao.com
 .partnerad.l.google.com
@@ -3792,7 +3798,6 @@
 .prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
-.privacy-sandbox.appsflyersdk.com
 .projecta-common-1258344701.file.myqcloud.com
 .projectagora.s3.amazonaws.com
 .promote.biz.weibo.cn
@@ -3897,7 +3902,6 @@
 .redrain-aglnsy.bytedance.com
 .refer.wordpress.com
 .referrer.disqus.com
-.register.appsflyersdk.com
 .reke.at.sohu.com
 .reksaidnslog.security.mihoyo.com
 .rel.msn.com
@@ -3924,6 +3928,7 @@
 .richmedia.video.qq.com
 .richmedia.yimg.com
 .riqhisfus.com
+.risk.clearbit.com
 .river.zhidao.baidu.com
 .rj.baidu.com
 .rj.m.taobao.com
@@ -4011,7 +4016,9 @@
 .sdtagging.azureedge.net
 .se.360.cn
 .sea.napi.ucweb.com
+.seal.digicert.com
 .seal.globalsign.com
+.seal.godaddy.com
 .sealine.youku.com
 .seao.business.samsung.com
 .search.anonymous.ads.brave.com
@@ -4030,6 +4037,7 @@
 .send.preply.com
 .sentry.d.xiaomi.net
 .sentry.music.163.com
+.server.iad.liveperson.net
 .serveraddr.service.kugou.com
 .service.danmu.youku.com
 .sessions.bugsnag.com
@@ -4092,6 +4100,7 @@
 .sms.petbarn.test.ajo.adobe.com
 .sms.rtcdpsummitlab.test.ajo.adobe.com
 .sms.ultimate-success-emea.test.ajo.adobe.com
+.snap.licdn.com
 .sngmta.qq.com
 .snippets.mozilla.com
 .snowflake.qq.com
@@ -4161,11 +4170,13 @@
 .stat.youku.com
 .stat.youpin.mi.com
 .static-addtoany-com.cdn.ampproject.org
+.static-ads.akamaized.net
 .static-doubleclick-net.l.google.com
 .static.addtoany.com
 .static.alimama.com
 .static.g.iqiyi.com
 .static.map.bdimg.com
+.static.narrativ.com
 .static.su.baidu.com
 .staticadm.leju.sina.com.cn
 .staticxx.facebook.com
@@ -4263,6 +4274,7 @@
 .telemetry-coverage.mozilla.org
 .telemetry.adobe.io
 .telemetry.appex.bing.com
+.telemetry.dropbox.com
 .telemetry.microsoft.com
 .telemetry.mozilla.org
 .telemetry.tradingview.com
@@ -4368,6 +4380,7 @@
 .tracking.rus.miui.com
 .tracking.smartbusiness.samsung.com
 .tracking3.lenovo.com
+.trackonomics.net
 .trading.assistant.miui.com
 .traffic.spot.im
 .trafficfuelpixel.s3-us-west-2.amazonaws.com
@@ -4473,6 +4486,7 @@
 .vcs.zijieapi.com
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
+.vebo-vast.pages.dev
 .vegslb.com
 .vf.startpage.com
 .vhotwsh.video.qq.com
@@ -4636,6 +4650,7 @@
 .zhstatic.zhihu.com
 .zmetrics.msn.com
 .znsv.baidu.com
+.zoosnet.net
 .zqhd.eastmoney.com
 .zqtk.net
 .zt.jd.com
@@ -4814,7 +4829,6 @@ livew.l.qq.com
 loan-supermarket.faas.ele.me
 log.star.ele.me
 log.stat.kugou.com
-log.ys7.com
 logview.uc.alimama.com
 lookup.api.bsb.baidu.com
 ls.l.qq.com
