--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-27 11:22:29
-# Total rules: 4966
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-28 10:41:29
+# Total rules: 4967
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -1009,7 +1009,6 @@
 .d17m68fovwmgxj.cloudfront.net
 .d17razj7klcrmv.cloudfront.net
 .d17tqr44y57o31.cloudfront.net
-.d17xmf66fp9kg9.cloudfront.net
 .d183xvcith22ty.cloudfront.net
 .d1852uckuj7o1j.cloudfront.net
 .d1856n6bep9gel.cloudfront.net
@@ -1739,7 +1738,6 @@
 .d2x19ia47o8gwm.cloudfront.net
 .d2xct5bvixoxmj.cloudfront.net
 .d2xng9e6gymuzr.cloudfront.net
-.d2xupcbyjjjfoa.cloudfront.net
 .d2xxqqn3tj9nf3.cloudfront.net
 .d2y1lr6nqzfgkq.cloudfront.net
 .d2y8ttytgze7qt.cloudfront.net
@@ -1769,6 +1767,7 @@
 .d300jm499woj5o.cloudfront.net
 .d301cxwfymy227.cloudfront.net
 .d303e3cdddb4ded4b6ff495a7b496ed5.s3.amazonaws.com
+.d30qdagvt44524.cloudfront.net
 .d30sxnvlkawtwa.cloudfront.net
 .d30tme16wdjle5.cloudfront.net
 .d30ts2zph80iw7.cloudfront.net
@@ -3063,6 +3062,7 @@
 .houyi.kkmh.com
 .hpd.baidu.com
 .hs-scripts.com
+.hs.eloqua.com
 .ht.www.sogou.com
 .httpdns-api.aliyuncs.com
 .httpdns-sc.aliyuncs.com
@@ -4242,6 +4242,7 @@
 .t-dsp.pinduoduo.com
 .t.alimama.com
 .t.e.x.com
+.t.eloqua.com
 .t.imgur.com
 .t.sj.qq.com
 .t.skimresources.com
