--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-28 10:41:29
-# Total rules: 4967
+# Generated from relevant_rules_wildcard_aware.txt on 2025-06-30 10:02:03
+# Total rules: 4975
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -21,7 +21,6 @@
 .1675450967.rsc.cdn77.org
 .1721553824.rsc.cdn77.org
 .1721697009.rsc.cdn77.org
-.1736253261.rsc.cdn77.org
 .175.220.196.104.bc.googleusercontent.com
 .1776396397.rsc.cdn77.org
 .1860793711.rsc.cdn77.org
@@ -117,6 +116,7 @@
 .ad.rus.xiaomi.com
 .ad.sina.com.cn
 .ad.sohu.com
+.ad.southcn.com
 .ad.thepaper.cn
 .ad.toutiao.com
 .ad.us.sinaimg.cn
@@ -457,6 +457,7 @@
 .ao-freegeoip.herokuapp.com
 .aod-image-material.cdn.bcebos.com
 .aod-video-antusheng.cdn.bcebos.com
+.apac.zendesk.com
 .apd-pcdnwxlogin.teg.tencent-cloud.net
 .apd-pcdnwxnat.teg.tencent-cloud.net
 .apd-pcdnwxstat.teg.tencent-cloud.net
@@ -603,6 +604,7 @@
 .bigdata.ssp.samsung.com
 .biggestplayer.cachefly.net
 .bingads.microsoft.com
+.binomo2.zendesk.com
 .bitcasino365.b-cdn.net
 .bithumb.com
 .biz.weibo.com
@@ -2888,6 +2890,7 @@
 .ggxwb.miguvideo.com
 .gigachadlitics.b-cdn.net
 .gimg.baidu.com
+.gimp.zendesk.com
 .gj.mmstat.com
 .gjapplog.uc.cn
 .gjapplog.ucweb.com
@@ -2907,6 +2910,7 @@
 .go.sohu.com
 .go.test.shop.app
 .go.webtoons.com
+.go.zendesk.com
 .golden1.sogou.com
 .golden1.sohu.com
 .goo-access-analytics.appspot.com
@@ -3243,6 +3247,7 @@
 .jingjia.qq.com
 .jioads.akamaized.net
 .jm.customer-success-apac.adobe.com
+.join.zendesk.com
 .jpg1.oss-cn-beijing.aliyuncs.com
 .jpush.cn
 .jpush.html5.qq.com
@@ -3421,6 +3426,7 @@
 .mapi.m.jd.com
 .mapp.qzone.qq.com
 .market-fin.meituan.com
+.market.178.com
 .market.21cn.com
 .marketing.agora.io
 .marketing.alibaba.com
@@ -3653,6 +3659,7 @@
 .openmonitor.alipay.com
 .openrcv.baidu.com
 .ophan.theguardian.com
+.oply.hearstapps.com
 .opportunarch.iqiyi.com
 .optaim.com
 .optimeeze.appspot.com
@@ -4047,6 +4054,7 @@
 .sfsafsadfjbbj-dsafjnb-1321533417.cos.ap-beijing.myqcloud.com
 .sg.a.stat.mi.com
 .sg2p.wns.windows.com
+.sgg.southcn.com
 .sh.apigw.tencentcs.com
 .shadu.baidu.com
 .shaquevip.oss-cn-zhangjiakou.aliyuncs.com
