--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-06-30 10:02:03
-# Total rules: 4975
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-01 13:12:44
+# Total rules: 4976
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -13,18 +13,11 @@
 .12551-1311572332.cos.ap-shanghai.myqcloud.com
 .1437953666.rsc.cdn77.org
 .1480876790.rsc.cdn77.org
-.1489322637.rsc.cdn77.org
 .1529462937.rsc.cdn77.org
 .1548164934.rsc.cdn77.org
 .1558334541.rsc.cdn77.org
-.1580240639.rsc.cdn77.org
 .1675450967.rsc.cdn77.org
-.1721553824.rsc.cdn77.org
-.1721697009.rsc.cdn77.org
 .175.220.196.104.bc.googleusercontent.com
-.1776396397.rsc.cdn77.org
-.1860793711.rsc.cdn77.org
-.1947923646.rsc.cdn77.org
 .1991482557.rsc.cdn77.org
 .1wincdn.b-cdn.net
 .2016.sina.cn
@@ -423,6 +416,7 @@
 .analytics.hz.netease.com
 .analytics.kaltura.com
 .analytics.live.com
+.analytics.macpaw.com
 .analytics.map.qq.com
 .analytics.meituan.net
 .analytics.msn.com
@@ -2217,8 +2211,10 @@
 .data.aem-showcase-internal.adobe.com
 .data.aem-sites-internal.adobe.com
 .data.aepcomms.cjm.adobe.com
+.data.aia.test.ajo.adobe.com
 .data.americanexpress.test.ajo.adobe.com
 .data.b2bmail.adobe.com
+.data.batch-accenture.test.ajo.adobe.com
 .data.batch-caixa.test.ajo.adobe.com
 .data.batch-doc.test.ajo.adobe.com
 .data.batch-na.test.ajo.adobe.com
@@ -2250,6 +2246,7 @@
 .data.fastlane-email.paypal.com
 .data.glbdns2.microsoft.com
 .data.gm.test.ajo.adobe.com
+.data.gxv.test.ajo.adobe.com
 .data.haoma.sogou.com
 .data.ingspain.test.ajo.adobe.com
 .data.intl.miui.com
@@ -3393,6 +3390,7 @@
 .lp.kkaufmansb.journeyusshared.adobe.com
 .lp.owarnersb.journeyusshared.adobe.com
 .lp.owarnersbdev.journeyusshared.adobe.com
+.lp.petbarn.test.ajo.adobe.com
 .lp.smartbusiness.samsung.com
 .lp.thenoshproject.test.ajo.adobe.com
 .lptag.liveperson.net
@@ -3566,6 +3564,7 @@
 .mssdk.volces.com
 .mssdk.zijieapi.com
 .mta.qq.com
+.mtg.macpaw.com
 .mtga.setapp.com
 .mtj.baidu.com
 .mtrace.qq.com
@@ -3799,6 +3798,7 @@
 .pr.nss.netease.com
 .practivate.adobe.com
 .predataclient.b-cdn.net
+.preferences.premierleague.test.ajo.adobe.com
 .presence.teams.live.com
 .presentationtracking.netflix.com
 .preview.msn.com
@@ -3970,6 +3970,7 @@
 .s.baidu.com
 .s.deepl.com
 .s.email-mobiledx.cjm.adobe.com
+.s.gxv.test.ajo.adobe.com
 .s.img.mix.sina.com.cn
 .s.lenovo.com
 .s.skimresources.com
