--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-01 13:12:44
-# Total rules: 4976
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-02 14:59:32
+# Total rules: 4981
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -646,6 +646,7 @@
 .bobo.corp.163.com
 .bole.shangshufang.ksosoft.com
 .books-analytics-events.apple.com
+.bootcdn.net
 .bordeaux.futurecdn.net
 .boscdn.bpc.baidu.com
 .boxai-structured-data-slice-formal-1258344701.cos.ap-guangzhou.myqcloud.com
@@ -1087,7 +1088,6 @@
 .d1dli2tyorled9.cloudfront.net
 .d1dqwj4dc78lwy.cloudfront.net
 .d1dtl43j681tft.cloudfront.net
-.d1e1rbybdt265x.cloudfront.net
 .d1e28xq8vu3baf.cloudfront.net
 .d1e3vw6pz2ty1m.cloudfront.net
 .d1e51ovcxdu97v.cloudfront.net
@@ -1563,6 +1563,7 @@
 .d2j71mqxljhlck.cloudfront.net
 .d2j74sjmqqyf26.cloudfront.net
 .d2jgbcah46jjed.cloudfront.net
+.d2jgih9urxpa47.cloudfront.net
 .d2jgp81mjwggyr.cloudfront.net
 .d2jp0uspx797vc.cloudfront.net
 .d2jp87c2eoduan.cloudfront.net
@@ -1902,7 +1903,6 @@
 .d3d7a0q05k6bvz.cloudfront.net
 .d3d9gb3ic8fsgg.cloudfront.net
 .d3d9pt4go32tk8.cloudfront.net
-.d3ddidv77grh0f.cloudfront.net
 .d3dpet1g0ty5ed.cloudfront.net
 .d3dq1nh1l1pzqy.cloudfront.net
 .d3ea0dyj1ehgcr.cloudfront.net
@@ -2434,6 +2434,7 @@
 .dl5ft52dtazxd.cloudfront.net
 .dlem1deojpcg7.cloudfront.net
 .dlh8c15zw7vfn.cloudfront.net
+.dlk457skl57zp.cloudfront.net
 .dlmr7hpb2buud.cloudfront.net
 .dlne6myudrxi1.cloudfront.net
 .dlooqrhebkjoh.cloudfront.net
@@ -3659,6 +3660,7 @@
 .openrcv.baidu.com
 .ophan.theguardian.com
 .oply.hearstapps.com
+.opoxv.com
 .opportunarch.iqiyi.com
 .optaim.com
 .optimeeze.appspot.com
@@ -3666,6 +3668,7 @@
 .optimus-ads.amap.com
 .orange-dc.youku.com
 .orbit.jd.com
+.orbsrv.com
 .os-mon.zijieapi.com
 .osfota.cdn.aliyun.com
 .otf.msn.com
@@ -4761,7 +4764,9 @@ credits3.bz.mgtv.com
 ctc.fe01.c3.xiaomi.com
 ctc.fe02.c3.xiaomi.com
 d.xiaomi.com
+d1e1rbybdt265x.cloudfront.net
 d1oxlq5h9kq8q5.cloudfront.net
+d3ddidv77grh0f.cloudfront.net
 da.mmarket.com
 dflow.bz.mgtv.com
 dns.m.sm.cn
