--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-02 14:59:32
-# Total rules: 4981
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-03 10:12:04
+# Total rules: 4972
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -511,7 +511,6 @@
 .applogios.uc.cn
 .appsad.cn
 .appsec-mobile.meituan.com
-.appsflyersdk.com
 .appsupport.qq.com
 .appversion.115.com
 .apsrgeo.amap.com
@@ -849,6 +848,7 @@
 .contentrecommend-out.mobile.sina.cn
 .contoso-my.sharepoint.com
 .contributions.guardianapis.com
+.conversions.appsflyersdk.com
 .cookie-guard-erdee.ey.r.appspot.com
 .cookielawblog.wordpress.com
 .coordinator.cm.bloomberg.com
@@ -2441,6 +2441,7 @@
 .dlp4luwpus5kr.cloudfront.net
 .dlrioxg1637dk.cloudfront.net
 .dls-account.di.atlas.samsung.com
+.dlsdk.appsflyersdk.com
 .dlsw.baidu.com
 .dlsw.br.baidu.com
 .dlswbr.baidu.com
@@ -2653,6 +2654,7 @@
 .dyj8pbcnat4xv.cloudfront.net
 .dykwdhfiuha6l.cloudfront.net
 .dymwsh1c2kslr.cloudfront.net
+.dynamic-report-api.appsflyersdk.com
 .dyodrs1kxvg6o.cloudfront.net
 .dyrfxuvraq0fk.cloudfront.net
 .dysuze6ljcmcr.cloudfront.net
@@ -2747,7 +2749,6 @@
 .events.bsky.app
 .events.framer.com
 .events.iap.unity3d.com
-.events.launchdarkly.com
 .events.mapbox.com
 .events.mz.unity3d.com
 .events.reddit.com
@@ -2869,6 +2870,7 @@
 .gb.corp.163.com
 .gc.sec.miui.com
 .gcapi.sy.kugou.com
+.gcdsdk.appsflyersdk.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gecko.snssdk.com
@@ -3186,6 +3188,7 @@
 .imtt.qq.com
 .in.applicationinsights.azure.com
 .in.yimg.com
+.inapps.appsflyersdk.com
 .indexww.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
@@ -3207,10 +3210,10 @@
 .inte.sogou.com
 .inte.sogoucdn.com
 .inte.sohu.com
-.intensedebate.com
 .interest.mix.sina.com.cn
 .intergient.com
 .internal-e.posthog.com
+.internal-t.posthog.com
 .intlsucus.ucweb.com
 .iob.imgur.com
 .ios-informationplatform.wps.cn
@@ -3284,6 +3287,7 @@
 .labadena.com
 .landing.ultimate-success-emea.test.ajo.adobe.com
 .landingpage.emaillpb.adobe.com
+.launches.appsflyersdk.com
 .lb.gtimg.com
 .lc-push.zhihu.com
 .leak.360.cn
@@ -3338,7 +3342,6 @@
 .log.tpns.tencent.com
 .log.waimai.baidu.com
 .log.web.kugou.com
-.log.ys7.com
 .log.zijieapi.com
 .log0-misc-alinc2.amemv.com
 .log0-misc-lf.amemv.com
@@ -3356,7 +3359,6 @@
 .logapi-and.zhipin.com
 .logapi-ios.zhipin.com
 .logapi.zhipin.com
-.logger.unsplash.com
 .loggw-ex.alipay.com
 .loggw-exsdk.alipay.com
 .loggw.alipay.com
@@ -3436,7 +3438,6 @@
 .masdkv6.3g.qq.com
 .master-shopify-tracker.s3.amazonaws.com
 .match.p4p.1688.com
-.matomo.openstreetmap.org
 .matwbp.iask.sina.com.cn
 .mazu.3g.qq.com
 .mazu.m.qq.com
@@ -3457,7 +3458,6 @@
 .media.globalsign.com
 .mediation-tracking.prd.mz.internal.unity3d.com
 .mediation.unity3d.com
-.mediavine.com
 .mellowads.b-cdn.net
 .mermaid.ximalaya.com
 .messaging-notifications.api.nytimes.com
@@ -3715,7 +3715,6 @@
 .paopao.iqiyi.com
 .papi.look.360.cn
 .par02p.wns.windows.com
-.parking.godaddy.com
 .parsely.com
 .partner.toutiao.com
 .partnerad.l.google.com
@@ -3808,6 +3807,7 @@
 .prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
+.privacy-sandbox.appsflyersdk.com
 .projecta-common-1258344701.file.myqcloud.com
 .projectagora.s3.amazonaws.com
 .promote.biz.weibo.cn
@@ -3912,6 +3912,7 @@
 .redrain-aglnsy.bytedance.com
 .refer.wordpress.com
 .referrer.disqus.com
+.register.appsflyersdk.com
 .reke.at.sohu.com
 .reksaidnslog.security.mihoyo.com
 .rel.msn.com
@@ -3938,7 +3939,6 @@
 .richmedia.video.qq.com
 .richmedia.yimg.com
 .riqhisfus.com
-.risk.clearbit.com
 .river.zhidao.baidu.com
 .rj.baidu.com
 .rj.m.taobao.com
@@ -4027,9 +4027,7 @@
 .sdtagging.azureedge.net
 .se.360.cn
 .sea.napi.ucweb.com
-.seal.digicert.com
 .seal.globalsign.com
-.seal.godaddy.com
 .sealine.youku.com
 .seao.business.samsung.com
 .search.anonymous.ads.brave.com
@@ -4048,7 +4046,6 @@
 .send.preply.com
 .sentry.d.xiaomi.net
 .sentry.music.163.com
-.server.iad.liveperson.net
 .serveraddr.service.kugou.com
 .service.danmu.youku.com
 .sessions.bugsnag.com
@@ -4112,7 +4109,6 @@
 .sms.petbarn.test.ajo.adobe.com
 .sms.rtcdpsummitlab.test.ajo.adobe.com
 .sms.ultimate-success-emea.test.ajo.adobe.com
-.snap.licdn.com
 .sngmta.qq.com
 .snippets.mozilla.com
 .snowflake.qq.com
@@ -4182,13 +4178,11 @@
 .stat.youku.com
 .stat.youpin.mi.com
 .static-addtoany-com.cdn.ampproject.org
-.static-ads.akamaized.net
 .static-doubleclick-net.l.google.com
 .static.addtoany.com
 .static.alimama.com
 .static.g.iqiyi.com
 .static.map.bdimg.com
-.static.narrativ.com
 .static.su.baidu.com
 .staticadm.leju.sina.com.cn
 .staticxx.facebook.com
@@ -4254,7 +4248,6 @@
 .t-dsp.pinduoduo.com
 .t.alimama.com
 .t.e.x.com
-.t.eloqua.com
 .t.imgur.com
 .t.sj.qq.com
 .t.skimresources.com
@@ -4287,7 +4280,6 @@
 .telemetry-coverage.mozilla.org
 .telemetry.adobe.io
 .telemetry.appex.bing.com
-.telemetry.dropbox.com
 .telemetry.microsoft.com
 .telemetry.mozilla.org
 .telemetry.tradingview.com
@@ -4499,7 +4491,6 @@
 .vcs.zijieapi.com
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
-.vebo-vast.pages.dev
 .vegslb.com
 .vf.startpage.com
 .vhotwsh.video.qq.com
@@ -4663,7 +4654,6 @@
 .zhstatic.zhihu.com
 .zmetrics.msn.com
 .znsv.baidu.com
-.zoosnet.net
 .zqhd.eastmoney.com
 .zqtk.net
 .zt.jd.com
@@ -4844,6 +4834,7 @@ livew.l.qq.com
 loan-supermarket.faas.ele.me
 log.star.ele.me
 log.stat.kugou.com
+log.ys7.com
 logview.uc.alimama.com
 lookup.api.bsb.baidu.com
 ls.l.qq.com
