--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-03 11:14:31
-# Total rules: 5117
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-04 10:51:09
+# Total rules: 5127
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -531,6 +531,7 @@
 .apponline.research.qq.com
 .appsad.cn
 .appsec-mobile.meituan.com
+.appsflyersdk.com
 .appsupport.qq.com
 .appversion.115.com
 .apsrgeo.amap.com
@@ -882,7 +883,6 @@
 .contentrecommend-out.mobile.sina.cn
 .contoso-my.sharepoint.com
 .contributions.guardianapis.com
-.conversions.appsflyersdk.com
 .cookie-guard-erdee.ey.r.appspot.com
 .cookielawblog.wordpress.com
 .coordinator.cm.bloomberg.com
@@ -2478,7 +2478,6 @@
 .dlp4luwpus5kr.cloudfront.net
 .dlrioxg1637dk.cloudfront.net
 .dls-account.di.atlas.samsung.com
-.dlsdk.appsflyersdk.com
 .dlsw.baidu.com
 .dlsw.br.baidu.com
 .dlswbr.baidu.com
@@ -2693,7 +2692,6 @@
 .dyj8pbcnat4xv.cloudfront.net
 .dykwdhfiuha6l.cloudfront.net
 .dymwsh1c2kslr.cloudfront.net
-.dynamic-report-api.appsflyersdk.com
 .dyodrs1kxvg6o.cloudfront.net
 .dyrfxuvraq0fk.cloudfront.net
 .dysuze6ljcmcr.cloudfront.net
@@ -2789,6 +2787,7 @@
 .events.bsky.app
 .events.framer.com
 .events.iap.unity3d.com
+.events.launchdarkly.com
 .events.mapbox.com
 .events.mz.unity3d.com
 .events.reddit.com
@@ -2916,7 +2915,6 @@
 .gb.corp.163.com
 .gc.sec.miui.com
 .gcapi.sy.kugou.com
-.gcdsdk.appsflyersdk.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gdtimg.com
@@ -3239,7 +3237,6 @@
 .imtt.qq.com
 .in.applicationinsights.azure.com
 .in.yimg.com
-.inapps.appsflyersdk.com
 .indexww.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
@@ -3261,6 +3258,7 @@
 .inte.sogou.com
 .inte.sogoucdn.com
 .inte.sohu.com
+.intensedebate.com
 .interest.mix.sina.com.cn
 .intergient.com
 .internal-e.posthog.com
@@ -3342,7 +3340,6 @@
 .labadena.com
 .landing.ultimate-success-emea.test.ajo.adobe.com
 .landingpage.emaillpb.adobe.com
-.launches.appsflyersdk.com
 .lb.gtimg.com
 .lc-push.zhihu.com
 .leads.baidu.com
@@ -3408,6 +3405,7 @@
 .log.tpns.tencent.com
 .log.waimai.baidu.com
 .log.web.kugou.com
+.log.ys7.com
 .log.zijieapi.com
 .log0-misc-alinc2.amemv.com
 .log0-misc-lf.amemv.com
@@ -3427,6 +3425,7 @@
 .logapi.zhipin.com
 .logdc.happyelements.cn
 .logger.csslcloud.net
+.logger.unsplash.com
 .loggw-ex.alipay.com
 .loggw-exsdk.alipay.com
 .loggw-extiny.alipay.com
@@ -3510,6 +3509,7 @@
 .masdkv6.3g.qq.com
 .master-shopify-tracker.s3.amazonaws.com
 .match.p4p.1688.com
+.matomo.openstreetmap.org
 .matwbp.iask.sina.com.cn
 .mazu.3g.qq.com
 .mazu.m.qq.com
@@ -3530,6 +3530,7 @@
 .media.globalsign.com
 .mediation-tracking.prd.mz.internal.unity3d.com
 .mediation.unity3d.com
+.mediavine.com
 .mellowads.b-cdn.net
 .mermaid.ximalaya.com
 .messaging-notifications.api.nytimes.com
@@ -3804,6 +3805,7 @@
 .paopao.iqiyi.com
 .papi.look.360.cn
 .par02p.wns.windows.com
+.parking.godaddy.com
 .parsely.com
 .partner.toutiao.com
 .partnerad.l.google.com
@@ -3908,7 +3910,6 @@
 .prexyone.appspot.com
 .privacy-center.org
 .privacy-policy.truste.com
-.privacy-sandbox.appsflyersdk.com
 .projecta-common-1258344701.file.myqcloud.com
 .projectagora.s3.amazonaws.com
 .promote.biz.weibo.cn
@@ -4014,7 +4015,6 @@
 .redrain-aglnsy.bytedance.com
 .refer.wordpress.com
 .referrer.disqus.com
-.register.appsflyersdk.com
 .reke.at.sohu.com
 .reksaidnslog.security.mihoyo.com
 .rel.msn.com
@@ -4042,6 +4042,7 @@
 .richmedia.video.qq.com
 .richmedia.yimg.com
 .riqhisfus.com
+.risk.clearbit.com
 .river.zhidao.baidu.com
 .rj.baidu.com
 .rj.m.taobao.com
@@ -4137,7 +4138,9 @@
 .sdtagging.azureedge.net
 .se.360.cn
 .sea.napi.ucweb.com
+.seal.digicert.com
 .seal.globalsign.com
+.seal.godaddy.com
 .sealine.youku.com
 .seao.business.samsung.com
 .search.anonymous.ads.brave.com
@@ -4159,6 +4162,7 @@
 .sentinelapi.vivo.com.cn
 .sentry.d.xiaomi.net
 .sentry.music.163.com
+.server.iad.liveperson.net
 .serveraddr.service.kugou.com
 .service.danmu.youku.com
 .sessions.bugsnag.com
@@ -4229,6 +4233,7 @@
 .sms.rtcdpsummitlab.test.ajo.adobe.com
 .sms.ultimate-success-emea.test.ajo.adobe.com
 .snake-ping-zjk.oss-cn-zhangjiakou.aliyuncs.com
+.snap.licdn.com
 .sngmta.qq.com
 .snippets.mozilla.com
 .snowflake.qq.com
@@ -4301,11 +4306,13 @@
 .stat.youku.com
 .stat.youpin.mi.com
 .static-addtoany-com.cdn.ampproject.org
+.static-ads.akamaized.net
 .static-doubleclick-net.l.google.com
 .static.addtoany.com
 .static.alimama.com
 .static.g.iqiyi.com
 .static.map.bdimg.com
+.static.narrativ.com
 .static.su.baidu.com
 .staticadm.leju.sina.com.cn
 .staticxx.facebook.com
@@ -4372,6 +4379,7 @@
 .sz88.oss-cn-shenzhen.aliyuncs.com
 .t.alimama.com
 .t.e.x.com
+.t.eloqua.com
 .t.imgur.com
 .t.in-neo.cn
 .t.sj.qq.com
@@ -4407,6 +4415,7 @@
 .telemetry-coverage.mozilla.org
 .telemetry.adobe.io
 .telemetry.appex.bing.com
+.telemetry.dropbox.com
 .telemetry.microsoft.com
 .telemetry.mozilla.org
 .telemetry.tradingview.com
@@ -4629,6 +4638,7 @@
 .vcs.zijieapi.com
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
+.vebo-vast.pages.dev
 .vegslb.com
 .vf.startpage.com
 .vhotwsh.video.qq.com
@@ -4803,6 +4813,7 @@
 .zhstatic.zhihu.com
 .zmetrics.msn.com
 .znsv.baidu.com
+.zoosnet.net
 .zqhd.eastmoney.com
 .zqtk.net
 .zt.jd.com
@@ -4979,7 +4990,6 @@ livew.l.qq.com
 loan-supermarket.faas.ele.me
 log.star.ele.me
 log.stat.kugou.com
-log.ys7.com
 logview.uc.alimama.com
 lookup.api.bsb.baidu.com
 ls.l.qq.com
