--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-07-04 14:55:17
-# Total rules: 4982
+# Generated from relevant_rules_wildcard_aware.txt on 2025-07-08 09:48:36
+# Total rules: 4984
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -1435,6 +1435,7 @@
 .d26p9ecwyy9zqv.cloudfront.net
 .d26us1doo6mh7f.cloudfront.net
 .d26yfyk0ym2k1u.cloudfront.net
+.d26ynmm8jhmv6r.cloudfront.net
 .d27genukseznht.cloudfront.net
 .d27gtglsu4f4y2.cloudfront.net
 .d27pxpvfn42pgj.cloudfront.net
@@ -1986,6 +1987,7 @@
 .d3lw2k94jnkvbs.cloudfront.net
 .d3lwdybbvxc4v9.cloudfront.net
 .d3m4hp4bp4w996.cloudfront.net
+.d3m6crjuedf6o.cloudfront.net
 .d3m6sept6cnil5.cloudfront.net
 .d3m8nzcefuqu7h.cloudfront.net
 .d3m9ng807i447x.cloudfront.net
